--- a/cart.html
+++ b/cart.html
@@ -190,7 +190,22 @@ button:hover {
                 margin: 10px;
                 padding: 10px;
             }
+	}
+		 @media (max-width: 786px) {
+            .payment-container {
+                width: 70%;
+                left:10%;
+                top:100px;
+            }
         }
+
+        @media (max-width: 540px) {
+            .wrapper {
+                min-height: 30vh;
+            }
+        }
+
+        
 
 	</style>
 </head>
