--- a/servicenew.html
+++ b/servicenew.html
@@ -1112,14 +1112,18 @@ h1 {
     <div class = "holder">
         <!-- navbar -->
         <nav class = "navbar bg-brown flex">
-            <div class = "container flex">
+           <div class = "container flex">
                 <div class = "toggler-and-category bg-brown text-white flex">
                     <button type = "button" class = "btn navbar-show-btn text-white">
                         <i class = "fas fa-bars"></i>
                     </button>
-                    <img src="./logo1.jpg" height="50px" width="100px">
+                    <img  class="img1" src="./logo1.jpg" height="50px" width="150px">
+
                     <div class = "category-list">
-                       
+                        
+                        <button type = "button" class = "btn category-toggler-btn text-white">
+                            <i class = "fas fa-circle-arrow-down"></i>
+                        </button>
                     </div>
 
                     <!-- side navbar -->
