--- a/servicenew.html
+++ b/servicenew.html
@@ -1117,8 +1117,7 @@ h1 {
                     <button type = "button" class = "btn navbar-show-btn text-white">
                         <i class = "fas fa-bars"></i>
                     </button>
-                    <img  class="img1" src="./logo1.jpg" height="50px" width="150px">
-
+                    <img src="./logo1.jpg" height="50px" width="100px">
                     <div class = "category-list">
                         
                         <button type = "button" class = "btn category-toggler-btn text-white">
