--- a/ausgrid.html
+++ b/ausgrid.html
@@ -964,13 +964,11 @@ h2{
     <div class = "holder">
         <!-- navbar -->
         <nav class = "navbar bg-brown flex">
-            <div class = "container flex">
-                <div class = "toggler-and-category bg-brown text-white flex">
+           <div class = "toggler-and-category bg-brown text-white flex">
                     <button type = "button" class = "btn navbar-show-btn text-white">
                         <i class = "fas fa-bars"></i>
                     </button>
-                    <img  class="img1" src="./logo1.jpg" height="50px" width="150px">
-
+                    <img src="./logo1.jpg" height="50px" width="100px">
                     <div class = "category-list">
                         
                         <button type = "button" class = "btn category-toggler-btn text-white">
