--- a/contact.html
+++ b/contact.html
@@ -149,8 +149,8 @@ function validate(){
     error_message.innerHTML = text;
     return false;
   }
-  if(address.length <= 20){
-    text = "Please Enter More Than 20 Characters";
+  if(address.length <= 10){
+    text = "Please Enter valid addres (More Than 10 Characters)";
     error_message.innerHTML = text;
     return false;
   }
