--- a/contact.html
+++ b/contact.html
@@ -145,12 +145,12 @@ function validate(){
     return false;
   }
   if(email.indexOf("@") == -1 || email.length < 6){
-    text = "Please enter a valid email address";
+    text = "Please enter a valid email address(Contains @)";
     error_message.innerHTML = text;
     return false;
   }
   if(address.length <= 10){
-    text = "Please Enter valid addres (More Than 10 Characters)";
+    text = "Please Enter valid address (More Than 10 Characters)";
     error_message.innerHTML = text;
     return false;
   }
