--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,8 @@ background-color:red;
 
 .wrapper .btn input[type="submit"]{
   border: 0px;
-  margin-top: 15px
+  margin-top: 15px;
+	height:40px;
   padding: 10px;
   text-align: center;
   width: 100%;
