--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Contact us form validation Using Javascript</title>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://fonts.googleapis.com/css2?family=Cinzel&family=EB+Garamond&family=La+Belle+Aurore&family=Sacramento&family=WindSong&display=swap" rel="stylesheet">
 	<script src="scripts.js"></script>
 	<style>
 	@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
@@ -76,6 +77,10 @@ background-color:red;
   border-radius: 25px;
   cursor: pointer;
 }
+ h2{
+font-family: 'WindSong', cursive;
+font-size:30px;
+			 }
 
 #error_message{
   margin-bottom: 20px;
@@ -92,6 +97,7 @@ background-color:red;
 
 <div class="wrapper">
   <h2>Contact us</h2>
+	 <img src="logo1.jpg" alt="Side Image" class="img"></center>
   <div id="error_message"></div>
   <form id="myform" onsubmit="return validate();">
     <div class="input_field">
@@ -115,6 +121,9 @@ background-color:red;
     <div class="btn">
         <input type="submit">
     </div>
+	  	<center>
+	<p>By submitting this form, you agree to the <br><mark style=background-color:white;color:red>privacy policy & terms and conditions</mark></p>
+	</center>
   </form>
 </div>
 <script>
