--- a/contact.html
+++ b/contact.html
@@ -90,6 +90,11 @@ font-size:30px;
   font-size: 14px;
   transition: all 0.5s ease;
 }
+		.img{
+            width:200px;
+            height:90px;
+}
+
 
 	</style>
 </head>
@@ -121,6 +126,7 @@ font-size:30px;
     <div class="btn">
         <input type="submit">
     </div>
+	  <br>
 	  	<center>
 	<p>By submitting this form, you agree to the <br><mark style=background-color:white;color:red>privacy policy & terms and conditions</mark></p>
 	</center>
