--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@ font-size:30px;
 <body>
 
 <div class="wrapper">
-  <h2>Contact us</h2>
+ <center>
 	 <img src="logo1.jpg" alt="Side Image" class="img"></center>
   <div id="error_message"></div>
   <form id="myform" onsubmit="return validate();">
@@ -175,7 +175,7 @@ function validate(){
     error_message.innerHTML = text;
     return false;
   }
-  alert("Form Submitted Successfully!Thank you");
+  alert("Form Submitted Successfully!Thank you we will contact you through mail and whatsapp!");
   return true;
 }
 
