--- a/servicenew.html
+++ b/servicenew.html
@@ -78,7 +78,7 @@ h1, h2, h3, h4{
     text-align:justify;
 }
 
-.btn {
+.btn1{
   position: relative;
   background:#D7B19D;
   color: var(--white);
