--- a/newfacility.html
+++ b/newfacility.html
@@ -69,7 +69,7 @@ h1, h2, h3, h4{
     line-height: 1.2;
 }
 
-.btn {
+.btn1{
   position: relative;
   background:#D7B19D;
   color: var(--white);
@@ -82,20 +82,7 @@ h1, h2, h3, h4{
   z-index: 1;
 }
 
-.btn1{
-  position: absolute;
-  left:1370px;
-  top:118px;
-  background:#D7B19D;
-  color: var(--white);
-  font-family: var(--ff-poppins);
-  font-size: var(--fs-5);
-  text-transform: var(--text-transform, capitalize);
-  border: 1px solid #D7B19D;
-  border-radius:15px;
-  padding: 10px 20px;
-  z-index: 1;
-}
+
 .btn5{
   position: absolute;
   left:1190px;
@@ -895,7 +882,7 @@ h1, h2, h3, h4{
                         
                         <li><a href = "rishsan.html">SIGNUP</a></li>
                     <!-- end of side navbar -->
-
+		    </ul>
                     <ul id = "category-list-items" class = "bg-white">
                         <li><a href = "design3.html">GET ESTIMATE</a></li>
                         <li><a href = "designform.html">BOOK CONSULTATION</a></li>
@@ -908,6 +895,13 @@ h1, h2, h3, h4{
                 <div class = "navbar-collapse flex">
                     <!-- nav list -->
                     <ul class = "navbar-nav text-uppercase">
+			    <li class = "nav-item">
+                            <a href = "index.html" class = "nav-link">
+                                <span class = "nav-link-text">HOME</span>
+                                
+
+                            </a>
+                        </li>
                         <li class = "nav-item">
                             <a href = "servicenew.html" class = "nav-link">
                                 <span class = "nav-link-text">SERVICES</span>
