--- a/servicenew.html
+++ b/servicenew.html
@@ -1130,6 +1130,7 @@ h1 {
                         <button type = "button" class = "btn navbar-hide-btn text-dark">
                             <i class = "fas fa-times"></i>
                         </button>
+			     <li><a href = "index.html">HOME</a></li>
                        <li><a href = "servicenew.html">SERVICES</a></li>
                         <li><a href = "homeversion.html">DESIGNERS</a></li>
                         <li><a href = "contact.html">CONTACT</a></li>
@@ -1151,6 +1152,13 @@ h1 {
                 <div class = "navbar-collapse flex">
                     <!-- nav list -->
                     <ul class = "navbar-nav text-uppercase">
+			     <li class = "nav-item">
+                            <a href = "index.html" class = "nav-link">
+                                <span class = "nav-link-text">HOME</span>
+                                
+
+                            </a>
+                        </li>
                         <li class = "nav-item">
                             <a href = "servicenew.html" class = "nav-link">
                                 <span class = "nav-link-text">SERVICES</span>
