--- a/portfolio.html
+++ b/portfolio.html
@@ -658,6 +658,7 @@ h1, h2, h3, h4{
                         <button type = "button" class = "btn navbar-hide-btn text-dark">
                             <i class = "fas fa-times"></i>
                         </button>
+			    <li><a href = "index.html">HOME</a></li>
                         <li><a href = "servicenew.html">SERVICES</a></li>
                         <li><a href = "homeversion.html">DESIGNERS</a></li>
                         <li><a href = "contact.html">CONTACT</a></li>
@@ -678,6 +679,13 @@ h1, h2, h3, h4{
                 <div class = "navbar-collapse flex">
                     <!-- nav list -->
                     <ul class = "navbar-nav text-uppercase">
+			    <li class = "nav-item">
+                            <a href = "index.html" class = "nav-link">
+                                <span class = "nav-link-text">HOME</span>
+                                
+
+                            </a>
+                        </li>
                         <li class = "nav-item">
                             <a href = "servicenew.html" class = "nav-link">
                                 <span class = "nav-link-text">SERVICES</span>
