--- a/homeversion.html
+++ b/homeversion.html
@@ -78,7 +78,7 @@ h1, h2, h3, h4{
     text-align:justify;
 }
 
-.btn {
+.btn1{
   position: relative;
   background:#D7B19D;
   color: var(--white);
@@ -929,6 +929,7 @@ h1, h2, h3, h4{
                         <button type = "button" class = "btn navbar-hide-btn text-dark">
                             <i class = "fas fa-times"></i>
                         </button>
+                        <li><a href = "index.html">HOME</a></li>
                         <li><a href = "servicenew.html">SERVICES</a></li>
                         <li><a href = "homeversion.html">DESIGNERS</a></li>
                         <li><a href = "contact.html">CONTACT</a></li>
@@ -949,6 +950,13 @@ h1, h2, h3, h4{
                 <div class = "navbar-collapse flex">
                     <!-- nav list -->
                     <ul class = "navbar-nav text-uppercase">
+                        <li class = "nav-item">
+                            <a href = "index.html" class = "nav-link">
+                                <span class = "nav-link-text">HOME</span>
+                                
+
+                            </a>
+                        </li>
                         <li class = "nav-item">
                             <a href = "servicenew.html" class = "nav-link">
                                 <span class = "nav-link-text">SERVICES</span>
@@ -1025,7 +1033,7 @@ h1, h2, h3, h4{
                                 <br>
                                 <center>
                                     <a href="designform.html">
-                                        <button class="btn"align="center">Design with Sharon</button></a>
+                                        <button class="btn1"align="center">Design with Sharon</button></a>
                                 </center>
                                 
                             </div>
@@ -1050,7 +1058,7 @@ h1, h2, h3, h4{
                                     <br>
                                     <center>
                                         <a href="designform.html">
-                                            <button class="btn"align="center">Design with Sharon</button></a>
+                                            <button class="btn1"align="center">Design with Sharon</button></a>
                                     </center>
                             </div>
                         </div>
@@ -1072,7 +1080,7 @@ h1, h2, h3, h4{
                                     <br>
                                     <center>
                                         <a href="designform.html">
-                                            <button class="btn"align="center">Design with Sharon</button></a>
+                                            <button class="btn1"align="center">Design with Sharon</button></a>
                                     </center>
                             </div>
                         </div>
@@ -1094,7 +1102,7 @@ h1, h2, h3, h4{
                    <br>
                                     <center>
                                     <a href="designform.html">
-                                        <button class="btn"align="center">Design with Sharon</button></a>
+                                        <button class="btn1"align="center">Design with Sharon</button></a>
                                 </center>
                             </div>
                         </div>
