--- a/servicenew.html
+++ b/servicenew.html
@@ -1126,7 +1126,7 @@ h1 {
                     </div>
 
                     <!-- side navbar -->
-                    <ul id = "side-navbar" class = "bg-white text-uppercase">
+                    <ul id = "side-navbar" class = "text-uppercase">
                         <button type = "button" class = "btn navbar-hide-btn text-dark">
                             <i class = "fas fa-times"></i>
                         </button>
@@ -1139,7 +1139,7 @@ h1 {
                     </ul>
                     <!-- end of side navbar -->
 
-                    <ul id = "category-list-items" class = "bg-white">
+                    <ul id = "category-list-items">
                       <li><a href = "design3.html">GET ESTIMATE</a></li>
                         <li><a href = "designform.html">BOOK CONSULTATION</a></li>
                         <li><a href = "newblog.html">RECENT BLOG</a></li>
