--- a/servicenew.html
+++ b/servicenew.html
@@ -78,9 +78,9 @@ h1, h2, h3, h4{
     text-align:justify;
 }
 
-.btn1{
+.btn{
   position: relative;
-  background:#D7B19D;
+  
   color: var(--white);
   font-family: var(--ff-poppins);
   font-size: var(--fs-5);
