--- a/servicenew.html
+++ b/servicenew.html
@@ -80,7 +80,7 @@ h1, h2, h3, h4{
 
 .btn{
   position: relative;
-  
+  background:#D7B19D;
   color: var(--white);
   font-family: var(--ff-poppins);
   font-size: var(--fs-5);
