--- a/servicenew.html
+++ b/servicenew.html
@@ -1147,6 +1147,7 @@ h1 {
                         <li><a href = "designform.html">BOOK CONSULTATION</a></li>
                         <li><a href = "newblog.html">RECENT BLOG</a></li>
                         <li><a href = "portfolio.html">PORTFOLIO</a></li>
+			     <li><a href = "newfacility.html">NEW DESIGNS</a></li>
                     </ul>
                 </div>
 
