--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,7 @@ h1, h2, h3, h4{
             <div class = "container">
                 <div class = "footer-content py grid text-center">
                     <div class = "footer-item">
-                        <h3>Love&Aesthetics♡</h3>
+                        <h3>Love&Aesthetics ♡ Rishani Vedamuthu</h3>
                         <p class = "text">At Love&Aesthetics, we believe that interior design is more than great functionality and beautiful aesthetics. We aim to make your home interiors a reflection of your personality. Your home should be something that you and your family take pride in and love to spend time in. Our dedicated home interior designers work with you tirelessly to tie your style with their design expertise, creating the perfect interior design plan.</p>
                         <ul class = "social-links flex">
                             <li>
@@ -1407,3 +1407,4 @@ h1, h2, h3, h4{
     <script src = "js/script.js"></script>
 </body>
 </html>
+
