--- a/index.html
+++ b/index.html
@@ -985,6 +985,7 @@ h1, h2, h3, h4{
                 <div class = "header-content grid text-center">
                     <div class = "header-left">
                         <h1>Love & Aesthetics,Best Interior Designers♡</h1>
+                        <h2>By Rishani Vedamuthu</h2>
                         <p class = "text">Improve the atmosphere through interior design that is driven by purposes to bring value into your environment</p>
                         <a href = "design3.html" class = "btn-header text-white bg-brown">GET ESTIMATE</a>
                     </div>
@@ -1407,4 +1408,5 @@ h1, h2, h3, h4{
     <script src = "js/script.js"></script>
 </body>
 </html>
+
 
